# nvim-palette

./: README.md  default.nix  nvim-palette.cabal  pinned_nixpkgs.nix  shell-python.nix  shell.nix  test.py
data/: options.mpack
doc/: palette.txt
haskell/: main.hs  shell.nix
lua/: init.lua
plugin/: palette.vim
rplugin/python3/: menus.py  palette.py  settings.py  source.py
rplugin/python3/palette/: __init__.py  keymaps.py  menus.py  palette.py  settings.py  source.py
src/: Fibonacci.hs  Palette.hs  main.hs
src/Fibonacci/: Plugin.hs
src/Palette/: Menu.hs  Plugin.hs
