cabal-version: >= 2
name: nvim-palette
version: 1.0.0
license: GPL-3
license-file: gpl-3.0.txt
build-type: Simple

executable daemon
  -- , msgpack-rpc
  -- data-msgpack last commit is 2018
  -- msgpack  is old
  -- https://hackage.haskell.org/package/messagepack 2019
    build-depends:
        base,
        optparse-applicative,
        bytestring-conversion,
        cassava,
        data-msgpack
    main-is: main.hs
    default-language: Haskell2010

