cabal-version: >= 2
name: nvim-palette
version: 1.0.0
license: GPL-3
license-file: gpl-3.0.txt
build-type: Simple

executable daemon
  -- , msgpack-rpc
  -- data-msgpack last commit is 2018
  -- data-msgpack  is a fork of msgpack that has since revived
  -- msgpack-haskell https://hackage.haskell.org/package/messagepack 2019
    hs-source-dirs: ., src
    build-depends:
        base,
        optparse-applicative,
        bytestring,
        bytestring-conversion,
        cassava,
        -- was a problem with quickcheck
        -- msgpack,
        data-msgpack,
        nvim-hs
    other-modules: Fibonacci, Fibonacci.Plugin, Palette
    main-is: src/main.hs
    default-language: Haskell2010

-- library 
